add (body css), add root

--- a/styles.css/styles.css
+++ b/styles.css/styles.css
@@ -1,8 +1,32 @@
+:root{
+  --primery-text-color: #434455;
+  --title-text-color: #2E2F42;
+  --background-color: #E5E5E5;
+}
+
+.body{
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+}
+
+.logo {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.16;
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: #4d5ae5;
+  text-decoration: none;
+}
+
+.logo-visual {
+  color: #2e2f42;
+}
+
 .menu {
   list-style: none;
-  font-family: 'Roboto', sans-serif;
   font-weight: 600;
-  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
@@ -22,9 +46,7 @@
 
 .header-contact {
   list-style: none;
-  font-family: 'Roboto', sans-serif;
   font-weight: 600;
-  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
@@ -42,23 +64,9 @@
   color: #4d5ae5;
 }
 
-.logo {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.16;
-  display: flex;
-  align-items: center;
-  letter-spacing: 0.03em;
-  color: #4d5ae5;
-}
 
-.logo-visual {
-  color: #2e2f42;
-}
 
 .title {
-  font-family: 'Roboto', sans-serif;
   font-weight: 600;
   font-size: 56px;
   line-height: 60px;
@@ -69,22 +77,18 @@
 }
 
 .secondary-title {
-  font-family: 'Roboto', sans-serif;
   font-weight: 600;
   font-size: 36px;
   line-height: 1.2;
   text-align: center;
   letter-spacing: 0.02em;
-  text-transform: capitalize;
-  color: #2e2f42;
+  color: var(--title-text-color);
 }
 
 .primery-buttom {
   font-family: 'Roboto', sans-serif;
   font-weight: 600;
-  font-size: 16px;
   line-height: 1.18;
-  display: flex;
   align-items: center;
   letter-spacing: 0.04em;
   color: #ffffff;
@@ -104,48 +108,40 @@
 }
 
 .work-list-title {
-  font-family: 'Roboto', sans-serif;
   font-weight: 600;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--title-text-color);
 }
 
 .work-list-text {
-  font-family: 'Roboto', sans-serif;
   font-weight: 400;
-  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--primery-text-color);
 }
 
 .people-title {
-  font-family: 'Roboto', sans-serif;
   font-weight: 600;
   font-size: 20px;
   line-height: 1.2;
   text-align: center;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--title-text-color);
 }
 
 .people-text {
-  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
   line-height: 1.5;
   text-align: center;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--primery-text-color);
 }
 
 .footer-text {
-  font-family: 'Roboto', sans-serif;
   font-weight: 400;
-  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   /* color: #E7E9FC; */
@@ -161,7 +157,6 @@
 .gallery-buttom {
   font-family: 'Roboto', sans-serif;
   font-weight: 600;
-  font-size: 16px;
   line-height: 1.5;
   display: flex;
   align-items: center;
@@ -179,21 +174,18 @@
 }
 
 .gallery-title {
-  font-family: 'Roboto', sans-serif;
   font-weight: 600;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--title-text-color);
 }
 
 .gallery-text {
-  font-family: 'Roboto', sans-serif;
   font-weight: 400;
-  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--primery-text-color);
 }
 
 
