--- a/styles.css/styles.css
+++ b/styles.css/styles.css
@@ -144,8 +144,8 @@
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  /* color: #E7E9FC; */
-  color: red;
+  color: #E7E9FC;
+  background-color: goldenrod;
 }
 
 /* portfolio */
